lua-factory: Don't leak list in xml parser

We were calling g_list_free() in the pointer that is the last element
of the list due g_list_reverse() that was called previously.

1,176 (336 direct, 840 indirect) bytes in 14 blocks are definitely
lost in loss record 3,289 of 3,315
   at 0x4C2DB9D: malloc (vg_replace_malloc.c:299)
   by 0x4E895B8: g_malloc (in /usr/lib64/libglib-2.0.so.0.5000.3)
   by 0x4EA1B12: g_slice_alloc (in /usr/lib64/libglib-2.0.so.0.5000.3)
   by 0x4E7F9E5: g_list_prepend (in /usr/lib64/libglib-2.0.so.0.5000.3)
   by 0x9377E69: build_table_recursively (lua-xml.c:64)
   by 0x9377FAF: build_table_recursively (lua-xml.c:81)
   by 0x9377FAF: build_table_recursively (lua-xml.c:81)
   by 0x9377FAF: build_table_recursively (lua-xml.c:81)
   by 0x9378182: build_table_from_xml_reader (lua-xml.c:121)

https://bugzilla.gnome.org/show_bug.cgi?id=779444